--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  test1:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,3 +29,8 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  teat2:
+    runs-on: ubuntu-latest
+    steps: 
+     - name: test2
+       run: echo "test2"
