--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@
 
 name: testNAME
 env: 
-  NAME: "jsjsjsjsjssjjs"
+  NAME: "${{github.sha}}"
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
