--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,27 +15,16 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  test1:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
   teat2:
     runs-on: ubuntu-latest
-    needs: [test1]
     steps: 
      - name: test2
-       run: echo "test2"
-       
+       uses: actions/checkout@v1
      - name: test3
-       run: echo "==================${{env.NAME}}"
+       run: ls -l
+     
+     - name: test3
+       run: uname -a
+       
+  
